# sae-recursive-depth

./: .gitignore  CLAUDE.md  DECISIONS.md  EXPERIMENTS.yaml  LICENSE  README.md  SPEC.md  WRITEUP.md  lab_notebook.md  proposal_v3.docx  pyproject.toml  references.bib
.claude/commands/: handoff.md  run-experiment.md
.claude/rules/: analysis.md  metrics.md  training.md
claudedocs/: research_meta_sae_anchor_diagnosis_20260425T2320Z.md
data/: gates.tsv  pwmcc_posthoc.tsv  results.tsv
docs/: WRITEUP.md  WRITEUP.tex  references.bib
docs/scripts/: ieeetran.template.tex  make_figures.py  render.sh  twocolumn_floats.py
experiments/: gates.tsv  pwmcc_posthoc.tsv  results.tsv  runner_notebook.md  state.lane.lane-0.json  state.lane.lane-1.json  state.lane.lane-2a.json  state.lane.lane-2b.json  state.lane.lane-4.json
handoffs/: 2026-04-28_anchor_diagnosis.md  2026-04-28_leask_retarget.md
sae_recursive_depth/analysis/: figures.py  run_autointerp.py
sae_recursive_depth/data/: activations.py  openwebtext_tokens.py  pile_tokens.py
sae_recursive_depth/metrics/: __init__.py  core.py
sae_recursive_depth/training/: config.py  harness.py  loaders.py  metrics_io.py  results_io.py  sae_models.py  seed.py  train_flat_sae.py  train_level0_batchtopk.py  (+2 more)
scripts/: aggregate_state.py  bootstrap.sh  commit_msg_immutability_guard.sh  compute_l0_live_mask.py  evaluate_gates.py  gpu_claim.py  gpu_policy.sh  heartbeat.py  lane_watchdog.sh  ntfy_send.sh  posthoc_pwmcc.py  pre_commit_immutability_guard.sh  run_analysis.sh  run_autopilot.sh  run_loop.sh  smoke_auxk.py
(+19 files in other folders)
